[project]
name = "comfyui-gatcha-embedding"
description = "A revolutionary technique for increasing output variety."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/BetaDoggo/ComfyUI-Gatcha-Embedding"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Gatcha-Embedding"
Icon = ""
